snapshots/ecl_parser__fmt__tests__time_formatting-2.snap
---
source: src/fmt.rs
expression: "reformat::<ast::Item>(9999,\n                      r#\"void main() { 5: a(); 3: a(); 0: a(); }\"#).trim()"
---
void main() {
+5: // 5
    a();
3:
    a();
0:
    a();
}
