snapshots/ecl_parser__fmt__tests__time_formatting-3.snap
---
source: src/fmt.rs
expression: "reformat::<ast::Item>(9999,\n                      r#\"void main() { -1: a(); 0: c(); -1: e(); 6: g(); }\"#).trim()"
---
void main() {
-1:
    a();
0:
    c();
-1:
    e();
0:
+6: // 6
    g();
}
