snapshots/ecl_parser__fmt__tests__time_formatting-4.snap
---
source: src/fmt.rs
expression: "reformat::<ast::Item>(9999,\n                      r#\"void main() { a(); b(); 6: c(); d(); -1: e(); f(); }\"#).trim()"
---
void main() {
    a();
    b();
+6: // 6
    c();
    d();
-1:
    e();
    f();
}
