snapshots/ecl_parser__fmt__tests__time_formatting.snap
---
source: src/fmt.rs
expression: "reformat::<ast::Item>(9999,\n                      r#\"void main() { 0: a(); 2: a(); 5: a(); }\"#).trim()"
---
void main() {
    a();
+2: // 2
    a();
+3: // 5
    a();
}
